kubernetes/master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master
  labels:
    app: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: master
  template:
    metadata:
      labels:
        app: master
    spec:
      containers:
      - name: master
        image: tpps88206/go-server-master:latest
        imagePullPolicy: Always
        ports:
        - name: api
          containerPort: 8080
