kubernetes/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: tpps88206/go-server-user:latest
        imagePullPolicy: Always
        ports:
        - name: api
          containerPort: 39000
