kubernetes/master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: master
  labels:
    app: master
spec:
  type: NodePort
  ports:
    - port: 39000
      targetPort: 39000
      protocol: TCP
      name: master
  selector:
    app: master
