kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: master
              servicePort: 39000
    - host: localhost
      http:
        paths:
          - path: /*
            backend:
              serviceName: master
              servicePort: 39000
